--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-pydantic==1.10.13
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.0.0
 python-multipart
 python-dotenv
 requests
